[package]
name = "kvs"
version = "0.1.0"
authors = ["jiang <392711804@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
failure = "0.1.8"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.2.15"
log = "0.4.14"
env_logger = "0.8.3"
sled = "0.34.6"

[dev-dependencies]
predicates = "1.0.7"
assert_cmd = "1.0.3"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.3.4"
rand = "0.8.3"
